--- a/package.json
+++ b/package.json
@@ -11,28 +11,29 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.5.3",
         "browser-sync": "^2.26.13",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "^7.0.2",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "cross-env": "^7.0.3",
         "css-mqpacker": "^7.0.0",
         "jquery": "^3.2",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
+        "laravel-mix": "^5.0.9",
+        "lodash": "^4.17.20",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
+        "sass": "^1.30.0",
         "sass-loader": "^8.0.0",
-        "sort-css-media-queries": "^1.5.0",
-        "vue-template-compiler": "^2.6.10"
+        "sort-css-media-queries": "^1.5.2",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "vue": "^2.5.17",
-        "vue-multilanguage": "^4.0.9",
+        "vue": "^2.6.12",
+        "vue-multilanguage": "^4.0.10",
         "vue-notification": "^1.3.20",
         "vue-phone-mask-input": "^1.1.11",
-        "vue-slider-component": "^3.1.5",
-        "vuelidate": "^0.7.5",
-        "vuex": "^3.1.3"
+        "vue-slider-component": "^3.2.11",
+        "vue-tel-input": "^4.4.2",
+        "vuelidate": "^0.7.6",
+        "vuex": "^3.6.0"
     }
 }
