--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js.map": "/js/app.js.map",
-    "/css/app.css.map": "/css/app.css.map"
+    "/js/app.js": "/js/app.js?id=c1146046eb0f027480f9",
+    "/css/app.css": "/css/app.css?id=281bfaacb6df6cee58ea",
+    "/js/app.js.map": "/js/app.js.map?id=c291c9b2a3c0cc4a075f",
+    "/css/app.css.map": "/css/app.css.map?id=4469bb6ae6504e74d67d"
 }
