--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=879bbcb177c90ca54ac9",
-    "/css/app.css": "/css/app.css?id=281bfaacb6df6cee58ea",
-    "/js/app.js.map": "/js/app.js.map?id=a30ad9ffa3b0a6bbe3cd",
-    "/css/app.css.map": "/css/app.css.map?id=4469bb6ae6504e74d67d"
+    "/js/app.js": "/js/app.js?id=ca608d61d90751986c91",
+    "/js/app.js.map": "/js/app.js.map?id=bf25494537259d9b481e"
 }
